src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Anrede_Brief_Deutsch__c</fullName>
        <formula>Contact.P7S1_AnredeBriefDeutsch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anrede Brief Deutsch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Absagelink__c</fullName>
        <label>Absagelink</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_CreatorDepartment__c</fullName>
        <description>Abteilung des Erstellers</description>
        <formula>CreatedBy.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Abteilung des Erstellers</inlineHelpText>
        <label>Abteilung Ersteller</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Creator__c</fullName>
        <description>Names des Erstellers</description>
        <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Names des Erstellers</inlineHelpText>
        <label>Ersteller</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_UserCode__c</fullName>
        <description>Automatisch generierter Code zur Verwendung in Mailings</description>
        <inlineHelpText>Automatisch generierter Code zur Verwendung in Mailings</inlineHelpText>
        <label>Benutzer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ZuletztGeaendertUm__c</fullName>
        <description>Zeigt Datum und Uhrzeit an, da dies nicht mit dem Standardfeld im Bericht möglich ist</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt Datum und Uhrzeit an, da dies nicht mit dem Standardfeld im Bericht möglich ist</inlineHelpText>
        <label>Zuletzt geändert um</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_Zusagelink__c</fullName>
        <label>Zusagelink</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_AnzahlGaeste__c</fullName>
        <label>Anzahl Gäste</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keine</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_FeedbackGegebenFreitext__c</fullName>
        <label>Feedback gegeben Freitext</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_FeedbackGegeben__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback gegeben</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_KontaktFunktion__c</fullName>
        <formula>Contact.Position_funktion__c</formula>
        <label>Kontakt/Funktion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_NamenDerGaeste__c</fullName>
        <label>Namen der Gäste</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_ausgeschieden__c</fullName>
        <formula>Contact.ausgeschieden__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ausgeschieden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_PositionFunktionIntern__c</fullName>
        <description>Ist die interne Sicht der Funktion/Position für diesen Kontakt.</description>
        <formula>Text(Contact.Som_PositionFunktionIntern__c)</formula>
        <inlineHelpText>Ist die interne Sicht der Funktion/Position für diesen Kontakt.</inlineHelpText>
        <label>Position/Funktion intern</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Statistik__c</fullName>
        <label>Status Statistik</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Versendet</fullName>
                </value>
                <value>
                    <fullName>Gewinn verschickt</fullName>
                </value>
                <value>
                    <fullName>Fehlerhaft</fullName>
                </value>
                <value>
                    <fullName>Zusage</fullName>
                </value>
                <value>
                    <fullName>Absage</fullName>
                </value>
                <value>
                    <fullName>Nicht-Teilnehmer</fullName>
                </value>
                <value>
                    <fullName>Teilnehmer</fullName>
                </value>
                <value>
                    <fullName>Bitte einladen</fullName>
                </value>
                <value>
                    <fullName>Bitte nachladen</fullName>
                </value>
                <value>
                    <fullName>Einladung verschickt</fullName>
                </value>
                <value>
                    <fullName>Reminder verschickt</fullName>
                </value>
                <value>
                    <fullName>Nachladung verschickt</fullName>
                </value>
                <value>
                    <fullName>Bestätigung verschickt</fullName>
                </value>
                <value>
                    <fullName>Danke verschickt</fullName>
                </value>
                <value>
                    <fullName>Feedback gegeben</fullName>
                </value>
                <value>
                    <fullName>Gewinner</fullName>
                </value>
                <value>
                    <fullName>Hard Bounce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>SomTv_B2BKontaktInaktivAusgeschieden</fullName>
        <active>true</active>
        <description>Verhindert das hinzufügen eines ausgeschiedenen oder inaktiven Kontaktes zu einer B2B Aktion</description>
        <errorConditionFormula>Contact.Funktion_inaktiv__c  = true
||
Contact.RecordType.Id = &quot;012D0000000Qe2p&quot;</errorConditionFormula>
        <errorMessage>Kontakt als inaktiv markiert. Inaktive oder ausgeschiedene Kontakte können nicht zu einen B2B-Aktion hinzugefügt oder geändert werden.</errorMessage>
    </validationRules>
</CustomObject>